# spin

template/web/template/: demo.opam  dune-project
template/web/template/lib/demo_web/: demo_web.ml  dune
template/web/template/lib/demo_web/handlers/: account_handler.ml
template/web/template/lib/demo_web/middlewares/: logger_middleware.ml  static_middleware.ml
