(library
 (name demo_web)
 (public_name demo.web)
 (libraries
  lwt
  uri
  cstruct
  opium_kernel
  tyxml
  demo
  mtime.clock.os
  ppx_deriving_yojson.runtime
  ; Opium libraries
  cookie
  session
  session-httpaf-lwt
  session-cookie
  ptime
  magic-mime)
 (flags -open Demo.Std)
 (preprocess
  (pps ppx_sexp_conv ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))

(rule
 (targets asset.ml)
 (deps
  ../../asset/main.css
  (:data
   (source_tree ../../asset/static)))
 (action
  (run %{bin:ocaml-crunch} -m plain ../../asset/static -o %{targets})))

(include_subdirs unqualified)
